Agregando cambio de estilo de img

--- a/pagian.html
+++ b/pagian.html
@@ -23,14 +23,14 @@
 
     <!--seccion de las imagenes  -->
 
-    <img width="150" height="150" src="image/el pequeño fantasma.JPG" alt="imagen de fondo ">
+    <img  class="img-p" width="150" height="150" src="image/el pequeño fantasma.JPG" alt="imagen de fondo ">
     <img width="150" height="150
     " src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTE9Xfy9DLPdzeWoEZETLdEbR0g7zGlB-eXIg&s"
         alt="imagen del caballerito">
 
     <!-- datos de las imagenes del caballerito -->
     <div>
-        <p>En las imagenes de muestra se ve al
+        <p>En las imagenes de muestra se ve  
             caballerito en dos posturas diferentes.</p>
         <br>
     </div>
