--- a/2-Ejercicio-Tabla/index.html
+++ b/2-Ejercicio-Tabla/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width-device-width intial-scale-1">
+    <link rel="stylesheet" href="CSS/Style.css">
     <title>Tabla</title>
 </head>
 <body>
@@ -14,14 +15,14 @@
             <th>Carrera</th>
         </tr>
         <tr>
-            <th>Erik</th>
-            <th>20</th>
-            <th>Administracion</th>
+            <td>Erik</td>
+            <td>20</td>
+            <td>Administracion</td>
         </tr>
         <tr>
-            <th>Israel</th>
-            <th>22</th>
-            <th>Sistemas</th>
+            <td>Israel</td>
+            <td>22</td>
+            <td>Sistemas</td>
         </tr>
     </TABLE>
 </body>
